tests/baselines/reference/labeledStatementDeclarationListInLoopNoCrash4.errors.txt
labeledStatementDeclarationListInLoopNoCrash4.ts(7,12): error TS2339: Property 'classFormat' does not exist on type 'ParseThemeData'.
labeledStatementDeclarationListInLoopNoCrash4.ts(13,12): error TS1005: ',' expected.
labeledStatementDeclarationListInLoopNoCrash4.ts(13,12): error TS2304: Cannot find name 'font'.
labeledStatementDeclarationListInLoopNoCrash4.ts(13,21): error TS1005: ',' expected.
labeledStatementDeclarationListInLoopNoCrash4.ts(13,23): error TS1135: Argument expression expected.
labeledStatementDeclarationListInLoopNoCrash4.ts(13,26): error TS1134: Variable declaration expected.
labeledStatementDeclarationListInLoopNoCrash4.ts(13,41): error TS2581: Cannot find name '$'. Do you need to install type definitions for jQuery? Try `npm i --save-dev @types/jquery`.
labeledStatementDeclarationListInLoopNoCrash4.ts(13,42): error TS1005: ')' expected.
labeledStatementDeclarationListInLoopNoCrash4.ts(13,53): error TS2304: Cannot find name 'fontSize'.
labeledStatementDeclarationListInLoopNoCrash4.ts(13,61): error TS1005: ';' expected.
labeledStatementDeclarationListInLoopNoCrash4.ts(14,12): error TS1005: ';' expected.
labeledStatementDeclarationListInLoopNoCrash4.ts(14,27): error TS1005: ',' expected.
labeledStatementDeclarationListInLoopNoCrash4.ts(20,1): error TS1005: '}' expected.
labeledStatementDeclarationListInLoopNoCrash4.ts(20,1): error TS1160: Unterminated template literal.


==== labeledStatementDeclarationListInLoopNoCrash4.ts (14 errors) ====
    export class ParseThemeData {
      parseButton(button: any) {
        const {type, size} = button;
        for (let item of type) {
          const fontType = item.type;
          const style = (state: string) => `color: var(--button-${fontType}-${state}-font-color)`;
          this.classFormat(`${style('active')});
               ~~~~~~~~~~~
!!! error TS2339: Property 'classFormat' does not exist on type 'ParseThemeData'.
        }
        for (let item of size) {
          const fontType = item.type;
          this.classFormat(
            [
              `font-size: var(--button-size-${fontType}-fontSize)`,
               ~~~~
!!! error TS1005: ',' expected.
               ~~~~
!!! error TS2304: Cannot find name 'font'.
                        ~
!!! error TS1005: ',' expected.
                          ~~~
!!! error TS1135: Argument expression expected.
                             ~
!!! error TS1134: Variable declaration expected.
                                            ~
!!! error TS2581: Cannot find name '$'. Do you need to install type definitions for jQuery? Try `npm i --save-dev @types/jquery`.
                                             ~
!!! error TS1005: ')' expected.
                                                        ~~~~~~~~
!!! error TS2304: Cannot find name 'fontSize'.
                                                                ~
!!! error TS1005: ';' expected.
              `height: var foo`,
               ~~~~~~
!!! error TS1005: ';' expected.
                              ~~
            ].join(';')
    ~~~~~~~~~~~~~~~~~~~
          );
    ~~~~~~~~
        }
    ~~~~~
      }
    ~~~
    }
    ~
    
    
!!! error TS1005: ',' expected.
    
!!! error TS1005: '}' expected.
!!! related TS1007 labeledStatementDeclarationListInLoopNoCrash4.ts:4:28: The parser expected to find a '}' to match the '{' token here.
    
!!! error TS1160: Unterminated template literal.